--- a/src/view/Views/Category/style.scss
+++ b/src/view/Views/Category/style.scss
@@ -1,4 +1,4 @@
 .heading {
-  max-width: 300px;
+  max-width: calc(var(--tile-size) * 4 + var(--tile-gap) * 3);
   padding-bottom: 10px;
 }
